--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,12 +75,14 @@
             android:layout_below="@id/imageView"
             android:layout_marginBottom="35dp"
             android:textSize="16dp"
+            android:text="caongocnguyen99@gmail.com"
             android:inputType="textPersonName"
             android:hint="Username"
             android:ems="10"
             android:drawableLeft="@drawable/ic_action_usertwo"/>
 
         <EditText
+            android:text="1Nguyen@"
             android:background="#11000000"
             android:layout_height="40dp"
             android:layout_width="250dp"
