--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -238,6 +238,7 @@
                 </LinearLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraintLayout"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="22dp"
@@ -283,7 +284,12 @@
                         android:textSize="16sp"
                         app:layout_constraintTop_toBottomOf="@id/textTrending" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
+            
+
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+
         </ScrollView>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
